# ai-housing-analyst

./: .env.example  .gitignore  PRD.md  README.md  pre-commit-config.yaml  pyproject.toml  requirements.txt  test_agent.py  test_clustering.py
.streamlit/: config.toml
data/chroma/054bb479-0f4b-4c86-b744-828935192c0e/: index_metadata.pickle
data/processed/: listings_sample_1000.parquet
notebooks/: 01_data_exploration.ipynb  quick_explore.py
outputs/: cluster_map.html
scripts/: build_review_index.py  save_processed_data.py  train_forecast.py
src/agent/: agent.py  discovery_agent.py  rag_agent.py
src/analytics/: clustering.py  eda.py
src/data/: cleaner.py  feature_engineer.py  loader.py
src/models/: forecast.py
src/ui/: dashboard.py
tests/: test_hallucination.py
