[tool.poetry]
name = "ai-housing-analyst"
version = "0.1.0"
description = "LLM-powered data agent for Airbnb housing analytics"
authors = ["Sabrina Pribadi <your-email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13.0"
pandas = "^2.2.0"
numpy = "^1.26.0"
scikit-learn = "^1.5.0"
geopandas = "^1.0.0"
folium = "^0.17.0"
shapely = "^2.0.0"
prophet = "^1.1.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
plotly = "^5.22.0"
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
openai = "^1.40.0"
streamlit = "^1.37.0"
python-dotenv = "^1.0.0"
jupyter = "^1.1.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
black = "^24.0.0"
ruff = "^0.7.0"
mypy = "^1.10.0"
pre-commit = "^4.0.0"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"